--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,12 @@ cabal.sandbox.config
 *.aux
 *.hp
 .stack-work/
+
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
